--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <div class="row">
            <header class="text-center col-12">
             <div class="buffer col-12"></div>
-            <h1 class="text-uppercase"><strong>simple startup page</strong></h1>
+            <h1 class="text"><strong>simple startup page</strong></h1>
           </header>
          
           <section class="text-center col-12">
